# weather-wizard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
src/weather_wizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/weatherwizard/: __main__.py  api.py  cache.py  cli.py
tests/: test_api.py
